welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:2: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime64.FlowerPot'
override def run() {
             ^